# ai-dev-bot

./: .env  README.md  pyproject.toml
agent/: brain.py  cli.py  git_ops.py  interfaces.py  server.py  tools.py  watcher.py
ai-plans/: 251214__IMPLEMENTATION_PLAN__refactor_devbot_core_and_cli.md  251214__PLAN__autonomous_devops_agent.md  251214__REPORT__V1_autonomous_devops_agent.md  251215__IMPLEMENTATION_REPORT__feedback_loop_and_execution.md
devbot/: __init__.py  brain.py  cli.py  config.py  git_ops.py  interfaces.py  server.py  tools.py  watcher.py
